Updated Building and Deploying Metascope (markdown)